codepkg/objects/MARS_Incident_Type__c.object
<CustomObject>
    <fields>
        <fullName>Declaration_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Declaration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <label>Incident Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Major Disaster</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>FMAG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>MARS Incident Type</relationshipLabel>
        <relationshipName>MARS_Incident_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MARS Incident Type</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MARS Incident Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>